; ModuleID = '/home/carl/AnghaBench/macvim/src/extr_ex_docmd.c_update_topline_cursor.c'
source_filename = "/home/carl/AnghaBench/macvim/src/extr_ex_docmd.c_update_topline_cursor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@curwin = common dso_local global %struct.TYPE_2__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @update_topline_cursor() #0 {
  %1 = call i32 (...) @check_cursor()
  %2 = call i32 (...) @update_topline()
  %3 = load %struct.TYPE_2__*, %struct.TYPE_2__** @curwin, align 8
  %4 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %9, label %7

7:                                                ; preds = %0
  %8 = call i32 (...) @validate_cursor()
  br label %9

9:                                                ; preds = %7, %0
  %10 = call i32 (...) @update_curswant()
  ret void
}

declare dso_local i32 @check_cursor(...) #1

declare dso_local i32 @update_topline(...) #1

declare dso_local i32 @validate_cursor(...) #1

declare dso_local i32 @update_curswant(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
